# Backtester

./: README.md  config.yml  execute.py
src/: init.py  process.py
src/speedy/: Cargo.toml  test.txt
src/speedy/src/: backtester.rs  features.rs  main.rs  strategy.rs  util.rs
