[package]
name = "speedy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
polars = {version = "0.36.2", features = ["polars-io"]}
rayon = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ta-lib-wrapper = "0.2.0"
